Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.4.1, 5.5.0 Alpha
-
XCode 6.3.1 (6D1002) on Mac OS 10.10.3.
QtCreator 3.3.* or 3.4.0
Qt-5.4.0, 5.4.1, 5.5-beta
Description
The issue has started after update
and/or installation of latest XCode - 6.3.1
Steps to reproduce.
1. Use QtCreator's Wizard to create a new project
that could be QtWidget or Qml based
or open any existing project;
2. Build it and run on device - it runs properly;
3. Open the project by XCode-6.3.1
4. Click on the Target - (see Fig-1) sometimes it's enough
to get the crash.
If not crashed - switch from Devices Universal to
iPhone or iPad and/or play with other parameters
at the screen (see Fig-2) attached.
5. See the XCode crash attached as well.
6. Now open a new project from Xcode
and observe that actions as in paragraph 4 are working properly,
and there are no crashes.
Suspected issues with xib file format or storyboard
generated by QtCreator.
Note that I've not played with QtCreator projects
for Mac; it's worth checking as well.
Expected behavior:
QtCreator-generated project to be compatible
with XCode and do not crash it.
Attachments
Issue Links
- is required for
-
QTBUG-44654 Issues to be fixed before Qt 5.5 RC
-
- Closed
-